--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ layout: default
             <div class="deviter"></div>
             <h3 class="title with-icon"><span class="fa fa-location-arrow cat-title"></span> Location</h3>
             <div class="grid-block">
-                <iframe src="https://www.google.com/maps/place/Conway,+AR/@35.0972596,-92.4442011,15z/data=!4m2!3m1!1s0x87cd6242c4fa2299:0xc16d5c18a365a00d" width="100%" height="100%" frameborder="0" style="border:0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104486.9389809855!2d-92.53134575632154!3d35.07631436652385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87cd6242c4fa2299%3A0xc16d5c18a365a00d!2sConway%2C+AR!5e0!3m2!1sen!2sus!4v1456432853159" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
